--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,1 +1,9 @@
 stages:
+  load_data:
+    cmd: python src/load_data.py --config=params.yaml
+    deps:
+    - src/get_data.py
+    - src/load_data.py
+    - dataset/wineqt.csv
+    outs:
+    - data/raw/wineqt.csv
