--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,3 +7,12 @@ stages:
     - dataset/wineqt.csv
     outs:
     - data/raw/wineqt.csv
+
+  split_data:
+      cmd: python src/split_data.py --config=params.yaml
+      deps:
+      - src/split_data.py
+      - data/raw/wineqt.csv
+      outs:
+      - data/processed/train_wineqt.csv
+      - data/processed/test_wineqt.csv 
